--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ Jinja2==2.9.6
 MarkupSafe==1.1.0
 numpy==1.13.1
 olefile==0.44
-opencv-python==3.2.0.7
+opencv-python
 Pillow==4.2.1
 python-engineio==1.7.0
 python-socketio==1.7.7
