--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.1.0
-numpy==1.13.1
+numpy
 olefile==0.44
 opencv-python
 Pillow==4.2.1
